--- a/css/resume-rwd-old.css
+++ b/css/resume-rwd-old.css
@@ -6,7 +6,7 @@
   .banner {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "name name name ." ". . contact contact";
+    grid-template-areas: 'name name name .' /* '. . . .' */ '. . contact contact';
   }
 
   .contact {
@@ -14,19 +14,24 @@
     margin-left: auto;
   }
 }
+
 @media only screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2) {
   .container {
     width: 95vw;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
-    grid-template-areas: "banner" "title-edu" "content-edu" "title-exp" "content-exp" "title-projects" "content-projects" "title-skills" "content-skills" "title-lang" "content-lang" "footer";
+    grid-template-areas: 'banner' 'title-edu' 'content-edu' 'title-exp' 'content-exp' 'title-projects' 'content-projects' 'title-skills' 'content-skills' 'title-lang' 'content-lang' 'footer';
     gap: 1rem;
   }
 
+  /* .project-container {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+  } */
   .banner {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "name name name . " ". . . ." ". .  contact contact";
+    grid-template-areas: 'name name name . ' '. . . .' '. .  contact contact';
   }
 
   .locale-menu {
@@ -45,15 +50,20 @@
     grid-template-columns: repeat(6, 1fr);
   }
 }
+
 @media only screen and (max-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
   .container {
     width: 95vw;
   }
 
+  /* .project-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  } */
   .banner {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "name" "contact";
+    grid-template-areas: 'name' 'contact';
     gap: 0;
     padding: 0.5rem;
   }
@@ -61,21 +71,31 @@
   .skill {
     grid-template-columns: repeat(5, 1fr);
   }
+
+
 }
+
 @media only screen and (max-width: 576px) and (-webkit-min-device-pixel-ratio: 2) {
+  /* @media only screen and (-webkit-min-device-pixel-ratio: 3),
+  only screen and (-moz-min-device-pixel-ratio: 3),
+  only screen and (-o-min-device-pixel-ratio: 3/1),
+  only screen and (min-device-pixel-ratio: 3),
+  only screen and (min-resolution: 458dpi),
+  only screen and (min-resolution: 3dppx) { */
   .container {
     width: auto;
   }
 
   .project-container {
     grid-template-columns: 1fr;
+    /* grid-auto-rows: auto; */
     gap: 1rem;
   }
 
   .banner {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "name" "contact";
+    grid-template-areas: 'name' 'contact';
     gap: 0;
     padding: 0.2rem;
   }
@@ -88,6 +108,7 @@
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
 @media only screen and (max-width: 375px) and (-webkit-min-device-pixel-ratio: 1) {
   body {
     font-size: 18px;
@@ -147,14 +168,14 @@
     padding-left: 1rem;
   }
 
-  .nav-bar-mail-mobile {
+  .navbar-mail-mobile {
     display: block;
     align-self: center;
     padding-right: 1rem;
     padding-top: 1rem;
   }
 
-  .nav-bar-title-mobile {
+  .navbar-title-mobile {
     display: block;
     flex-grow: 1;
     text-align: center;
@@ -176,7 +197,7 @@
   }
 
   .lang-list,
-.lang-level {
+  .lang-level {
     width: 9.25rem;
     font-size: 1rem;
   }
@@ -197,5 +218,3 @@
     padding: 1.5rem 0;
   }
 }
-
-/*# sourceMappingURL=resume-rwd.css.map */
