--- a/css/resume-rwd.scss
+++ b/css/resume-rwd.scss
@@ -6,7 +6,7 @@
   .banner {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "name name name ." ". . contact contact";
+    grid-template-areas: 'name name name .' '. . contact contact';
   }
 
   .contact {
@@ -14,19 +14,20 @@
     margin-left: auto;
   }
 }
+
 @media only screen and (max-width: 992px) and (-webkit-min-device-pixel-ratio: 2) {
   .container {
     width: 95vw;
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
-    grid-template-areas: "banner" "title-edu" "content-edu" "title-exp" "content-exp" "title-projects" "content-projects" "title-skills" "content-skills" "title-lang" "content-lang" "footer";
+    grid-template-areas: 'banner' 'title-edu' 'content-edu' 'title-exp' 'content-exp' 'title-projects' 'content-projects' 'title-skills' 'content-skills' 'title-lang' 'content-lang' 'footer';
     gap: 1rem;
   }
 
   .banner {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: "name name name . " ". . . ." ". .  contact contact";
+    grid-template-areas: 'name name name . ' '. . . .' '. .  contact contact';
   }
 
   .locale-menu {
@@ -45,6 +46,7 @@
     grid-template-columns: repeat(6, 1fr);
   }
 }
+
 @media only screen and (max-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
   .container {
     width: 95vw;
@@ -53,7 +55,7 @@
   .banner {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "name" "contact";
+    grid-template-areas: 'name' 'contact';
     gap: 0;
     padding: 0.5rem;
   }
@@ -61,7 +63,9 @@
   .skill {
     grid-template-columns: repeat(5, 1fr);
   }
+
 }
+
 @media only screen and (max-width: 576px) and (-webkit-min-device-pixel-ratio: 2) {
   .container {
     width: auto;
@@ -75,7 +79,7 @@
   .banner {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "name" "contact";
+    grid-template-areas: 'name' 'contact';
     gap: 0;
     padding: 0.2rem;
   }
@@ -88,6 +92,7 @@
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
 @media only screen and (max-width: 375px) and (-webkit-min-device-pixel-ratio: 1) {
   body {
     font-size: 18px;
@@ -176,7 +181,7 @@
   }
 
   .lang-list,
-.lang-level {
+  .lang-level {
     width: 9.25rem;
     font-size: 1rem;
   }
@@ -197,5 +202,3 @@
     padding: 1.5rem 0;
   }
 }
-
-/*# sourceMappingURL=resume-rwd.css.map */
